26.3-snapshot-1